pipe async and changeDetectionStrategy OnPush

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "doc": "compodoc -p tsconfig.json -o -s",
-    "analyze": "ng build --prod --stats-json && webpack-bundle-analyzer dist/crm-scalian-dec/stats.json"
+    "analyze": "ng build --prod --stats-json && webpack-bundle-analyzer dist/crm-scalian-dec/stats.json",
+    "jsonServer": "json-server --watch mock_db/db.json"
   },
   "private": true,
   "dependencies": {
