--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "jsonServer": "json-server --watch mock_db/db.json"
   },
   "engines": {
-    "node": ">=10.9.0 <=14.16.0",
+    "node": ">=10.9.0 <14.16.0",
     "yarn": ">=1.22.4 <2"
   },
   "private": true,
