--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "doc": "compodoc -p tsconfig.json -o -s",
-    "analyze": "ng build --prod --stats-json && webpack-bundle-analyzer dist/crm-scalian-dec/stats.json",
-    "jsonServer": "json-server --watch mock_db/db.json"
+    "analyze": "ng build --prod --stats-json && webpack-bundle-analyzer dist/crm-scalian-dec/fr/stats.json",
+    "jsonServer": "json-server --watch mock_db/db.json",
+    "coverage":"jest --coverage"
   },
   "engines": {
     "node": ">=10.9.0 <14.16.0",
@@ -27,32 +28,33 @@
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "@briebug/jest-schematic": "^3.1.0",
     "@fortawesome/angular-fontawesome": "^0.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "bootstrap": "^4.5.0",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-builders/jest": "11.1.0",
     "@angular-devkit/build-angular": "~0.1100.3",
     "@angular/cli": "~11.0.3",
     "@angular/compiler-cli": "~11.0.3",
     "@compodoc/compodoc": "^1.1.11",
     "@types/jasmine": "~3.6.0",
+    "@types/jest": "26.0.20",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "jest": "26.6.3",
     "json-server": "^0.16.3",
-    "karma": "~5.1.0",
-    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
